--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
             <a href="about.html">About</a>
             <a href="contact.html">Contact</a>
             </div>
+          
+          <h2>THE SHOE-GEEK</h2>
+          
            <div class="gallery">
                 <a href="image-1.html"><img src="images/ankle-strap0.jpg"/></a>
                 <a href="image-2.html"><img src="images/boot0.jpg"/></a>
